<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/help_page"

    tools:context=".HelpActivity">

    <Button
        android:id="@+id/helpBackButton"
        android:layout_width="84dp"
        android:layout_height="66dp"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/back_button"
        android:text="@string/help_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/gameInfo_Textview"
        android:layout_width="324dp"
        android:layout_height="299dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:scrollbars="vertical"
        android:text="@string/gameDescription"
        android:textColor="#090909"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/Ref_TextView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Ref_TextView"
        android:layout_width="324dp"
        android:layout_height="299dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/referenceTextBox"
        android:textColor="#090909"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/gameInfo_Textview"
        app:layout_constraintTop_toTopOf="parent" />


    <!--    <TextView-->
<!--        android:id="@+id/defaultpassword"-->
<!--        android:layout_width="615dp"-->
<!--        android:layout_height="30dp"-->
<!--        android:layout_gravity="center"-->
<!--        android:layout_marginBottom="52dp"-->
<!--        android:autoLink="web"-->
<!--        android:gravity="center"-->
<!--        android:padding="20px"-->
<!--        android:text="@string/defaultpassword"-->
<!--        android:textAppearance="?android:attr/textAppearanceSmall"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/LinkTextView1"-->
<!--        app:layout_constraintStart_toStartOf="parent" />-->

</androidx.constraintlayout.widget.ConstraintLayout>



